trying again to upload

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Challenge 4.loader.js";
+      var loaderUrl = buildUrl + "/Challenge4-B00156239.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Challenge 4.data.gz",
-        frameworkUrl: buildUrl + "/Challenge 4.framework.js.gz",
-        codeUrl: buildUrl + "/Challenge 4.wasm.gz",
+        dataUrl: buildUrl + "/Challenge4-B00156239.data.gz",
+        frameworkUrl: buildUrl + "/Challenge4-B00156239.framework.js.gz",
+        codeUrl: buildUrl + "/Challenge4-B00156239.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Challenge 4",
